--- a/popup.html
+++ b/popup.html
@@ -77,6 +77,73 @@
 
     .divider2 { height: 1px; background: #e5e7eb; margin: 12px 0; }
 
+    /* ── Toggle Switch ── */
+    .toggle-section {
+      margin-bottom: 12px;
+    }
+    .toggle-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 12px;
+      background: white;
+      border: 1.5px solid #e5e7eb;
+      border-radius: 8px;
+    }
+    .toggle-row:hover { border-color: #0A66C2; }
+    .toggle-left {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+    }
+    .toggle-label { font-size: 13px; font-weight: 600; color: #111827; }
+    .toggle-desc  { font-size: 11px; color: #6b7280; }
+    .toggle-switch {
+      position: relative;
+      width: 44px;
+      height: 24px;
+      flex-shrink: 0;
+    }
+    .toggle-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    .toggle-slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: #34d399;
+      border-radius: 24px;
+      transition: 0.25s;
+    }
+    .toggle-slider:before {
+      content: "";
+      position: absolute;
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      bottom: 3px;
+      background: white;
+      border-radius: 50%;
+      transition: 0.25s;
+    }
+    .toggle-switch input:checked + .toggle-slider {
+      background: #dc2626;
+    }
+    .toggle-switch input:checked + .toggle-slider:before {
+      transform: translateX(20px);
+    }
+    .toggle-mode-text {
+      font-size: 10px;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      margin-top: 4px;
+    }
+    .toggle-mode-text.mark { color: #059669; }
+    .toggle-mode-text.hide { color: #dc2626; }
+
     /* ── History ── */
     .history-header {
       display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px;
@@ -155,6 +222,23 @@
         <div class="option-desc">Find employees at the company in this role on LinkedIn</div>
       </div>
     </label>
+
+    <div class="divider2"></div>
+
+    <div class="toggle-section">
+      <div class="options-title">👁️ Applied Jobs on Search Page</div>
+      <div class="toggle-row">
+        <div class="toggle-left">
+          <div class="toggle-label" id="toggleLabel">✅ Mark applied jobs</div>
+          <div class="toggle-desc" id="toggleDesc">Shows green badge on applied cards</div>
+          <div class="toggle-mode-text mark" id="toggleModeText">MARK MODE</div>
+        </div>
+        <label class="toggle-switch">
+          <input type="checkbox" id="chk-hideApplied" />
+          <span class="toggle-slider"></span>
+        </label>
+      </div>
+    </div>
 
     <div class="divider2"></div>
 
