--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>Naukri → LinkedIn</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       width: 320px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       background: #f9fafb;
       color: #1a1a2e;
     }
+
     .header {
       background: linear-gradient(135deg, #0A66C2, #004182);
       padding: 14px 16px;
@@ -18,11 +25,26 @@
       align-items: center;
       gap: 10px;
     }
-    .header-icon { font-size: 22px; }
-    .header-text h1 { font-size: 14px; font-weight: 700; color: white; }
-    .header-text p  { font-size: 11px; color: rgba(255,255,255,0.7); margin-top: 1px; }
 
-    .body { padding: 12px; }
+    .header-icon {
+      font-size: 22px;
+    }
+
+    .header-text h1 {
+      font-size: 14px;
+      font-weight: 700;
+      color: white;
+    }
+
+    .header-text p {
+      font-size: 11px;
+      color: rgba(255, 255, 255, 0.7);
+      margin-top: 1px;
+    }
+
+    .body {
+      padding: 12px;
+    }
 
     .shortcut {
       text-align: center;
@@ -30,6 +52,7 @@
       color: #9ca3af;
       margin-bottom: 12px;
     }
+
     .kbd {
       background: #f3f4f6;
       border: 1px solid #d1d5db;
@@ -42,14 +65,22 @@
       color: #374151;
     }
 
-    .divider { height: 1px; background: #e5e7eb; margin-bottom: 12px; }
+    .divider {
+      height: 1px;
+      background: #e5e7eb;
+      margin-bottom: 12px;
+    }
 
     /* ── Checkboxes ── */
     .options-title {
-      font-size: 11px; font-weight: 700; color: #374151;
-      text-transform: uppercase; letter-spacing: 0.05em;
+      font-size: 11px;
+      font-weight: 700;
+      color: #374151;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
       margin-bottom: 8px;
     }
+
     .option-row {
       display: flex;
       align-items: flex-start;
@@ -62,99 +93,80 @@
       cursor: pointer;
       transition: border-color 0.15s;
     }
-    .option-row:hover { border-color: #0A66C2; }
-    .option-row.checked { border-color: #0A66C2; background: #f0f7ff; }
+
+    .option-row:hover {
+      border-color: #0A66C2;
+    }
+
+    .option-row.checked {
+      border-color: #0A66C2;
+      background: #f0f7ff;
+    }
+
     .option-row input[type="checkbox"] {
       margin-top: 2px;
-      width: 15px; height: 15px;
+      width: 15px;
+      height: 15px;
       accent-color: #0A66C2;
       flex-shrink: 0;
       cursor: pointer;
     }
-    .option-text { flex: 1; }
-    .option-label { font-size: 13px; font-weight: 600; color: #111827; }
-    .option-desc  { font-size: 11px; color: #6b7280; margin-top: 1px; line-height: 1.4; }
 
-    .divider2 { height: 1px; background: #e5e7eb; margin: 12px 0; }
+    .option-text {
+      flex: 1;
+    }
 
-    /* ── Toggle Switch ── */
-    .toggle-section {
-      margin-bottom: 12px;
+    .option-label {
+      font-size: 13px;
+      font-weight: 600;
+      color: #111827;
     }
-    .toggle-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 12px;
-      background: white;
-      border: 1.5px solid #e5e7eb;
-      border-radius: 8px;
+
+    .option-desc {
+      font-size: 11px;
+      color: #6b7280;
+      margin-top: 1px;
+      line-height: 1.4;
     }
-    .toggle-row:hover { border-color: #0A66C2; }
-    .toggle-left {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
+
+    .divider2 {
+      height: 1px;
+      background: #e5e7eb;
+      margin: 12px 0;
     }
-    .toggle-label { font-size: 13px; font-weight: 600; color: #111827; }
-    .toggle-desc  { font-size: 11px; color: #6b7280; }
-    .toggle-switch {
-      position: relative;
-      width: 44px;
-      height: 24px;
-      flex-shrink: 0;
-    }
-    .toggle-switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-    .toggle-slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: #34d399;
-      border-radius: 24px;
-      transition: 0.25s;
-    }
-    .toggle-slider:before {
-      content: "";
-      position: absolute;
-      height: 18px;
-      width: 18px;
-      left: 3px;
-      bottom: 3px;
-      background: white;
-      border-radius: 50%;
-      transition: 0.25s;
-    }
-    .toggle-switch input:checked + .toggle-slider {
-      background: #dc2626;
-    }
-    .toggle-switch input:checked + .toggle-slider:before {
-      transform: translateX(20px);
-    }
-    .toggle-mode-text {
-      font-size: 10px;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      margin-top: 4px;
-    }
-    .toggle-mode-text.mark { color: #059669; }
-    .toggle-mode-text.hide { color: #dc2626; }
 
     /* ── History ── */
     .history-header {
-      display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 8px;
     }
-    .history-title { font-size: 12px; font-weight: 700; color: #374151; }
-    .clear-btn {
-      font-size: 11px; color: #dc2626; background: none; border: none; cursor: pointer; font-weight: 600;
-    }
-    .clear-btn:hover { text-decoration: underline; }
 
-    .history-list { max-height: 240px; overflow-y: auto; }
+    .history-title {
+      font-size: 12px;
+      font-weight: 700;
+      color: #374151;
+    }
+
+    .clear-btn {
+      font-size: 11px;
+      color: #dc2626;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    .clear-btn:hover {
+      text-decoration: underline;
+    }
+
+    .history-list {
+      max-height: 240px;
+      overflow-y: auto;
+    }
+
     .history-item {
       background: white;
       border: 1px solid #e5e7eb;
@@ -166,21 +178,64 @@
       justify-content: space-between;
       gap: 8px;
     }
-    .history-item:last-child { margin-bottom: 0; }
-    .history-item-text { flex: 1; min-width: 0; }
-    .history-company  { font-size: 13px; font-weight: 700; color: #111827; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-    .history-position { font-size: 11px; color: #6b7280; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-    .history-date     { font-size: 10px; color: #9ca3af; margin-top: 2px; }
-    .del-btn {
-      background: none; border: none; cursor: pointer; color: #d1d5db;
-      font-size: 16px; line-height: 1; flex-shrink: 0; padding: 0 2px;
+
+    .history-item:last-child {
+      margin-bottom: 0;
     }
-    .del-btn:hover { color: #dc2626; }
+
+    .history-item-text {
+      flex: 1;
+      min-width: 0;
+    }
+
+    .history-company {
+      font-size: 13px;
+      font-weight: 700;
+      color: #111827;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .history-position {
+      font-size: 11px;
+      color: #6b7280;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .history-date {
+      font-size: 10px;
+      color: #9ca3af;
+      margin-top: 2px;
+    }
+
+    .del-btn {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #d1d5db;
+      font-size: 16px;
+      line-height: 1;
+      flex-shrink: 0;
+      padding: 0 2px;
+    }
+
+    .del-btn:hover {
+      color: #dc2626;
+    }
+
     .empty-history {
-      font-size: 12px; color: #9ca3af; text-align: center; padding: 20px 0; font-style: italic;
+      font-size: 12px;
+      color: #9ca3af;
+      text-align: center;
+      padding: 20px 0;
+      font-style: italic;
     }
   </style>
 </head>
+
 <body>
   <div class="header">
     <div class="header-icon">🔍</div>
@@ -225,23 +280,6 @@
 
     <div class="divider2"></div>
 
-    <div class="toggle-section">
-      <div class="options-title">👁️ Applied Jobs on Search Page</div>
-      <div class="toggle-row">
-        <div class="toggle-left">
-          <div class="toggle-label" id="toggleLabel">✅ Mark applied jobs</div>
-          <div class="toggle-desc" id="toggleDesc">Shows green badge on applied cards</div>
-          <div class="toggle-mode-text mark" id="toggleModeText">MARK MODE</div>
-        </div>
-        <label class="toggle-switch">
-          <input type="checkbox" id="chk-hideApplied" />
-          <span class="toggle-slider"></span>
-        </label>
-      </div>
-    </div>
-
-    <div class="divider2"></div>
-
     <div class="history-header">
       <span class="history-title">📋 Applied / Searched History</span>
       <button class="clear-btn" id="clearBtn">Clear all</button>
@@ -253,4 +291,5 @@
 
   <script src="popup.js"></script>
 </body>
+
 </html>
