--- a/popup.html
+++ b/popup.html
@@ -26,9 +26,7 @@
       gap: 10px;
     }
 
-    .header-icon {
-      font-size: 22px;
-    }
+    .header-icon { font-size: 22px; }
 
     .header-text h1 {
       font-size: 14px;
@@ -42,9 +40,7 @@
       margin-top: 1px;
     }
 
-    .body {
-      padding: 12px;
-    }
+    .body { padding: 12px; }
 
     .shortcut {
       text-align: center;
@@ -71,8 +67,8 @@
       margin-bottom: 12px;
     }
 
-    /* ── Checkboxes ── */
-    .options-title {
+    /* ── Section titles ── */
+    .section-title {
       font-size: 11px;
       font-weight: 700;
       color: #374151;
@@ -81,6 +77,7 @@
       margin-bottom: 8px;
     }
 
+    /* ── Checkboxes ── */
     .option-row {
       display: flex;
       align-items: flex-start;
@@ -94,9 +91,7 @@
       transition: border-color 0.15s;
     }
 
-    .option-row:hover {
-      border-color: #0A66C2;
-    }
+    .option-row:hover { border-color: #0A66C2; }
 
     .option-row.checked {
       border-color: #0A66C2;
@@ -112,9 +107,7 @@
       cursor: pointer;
     }
 
-    .option-text {
-      flex: 1;
-    }
+    .option-text { flex: 1; }
 
     .option-label {
       font-size: 13px;
@@ -134,6 +127,120 @@
       background: #e5e7eb;
       margin: 12px 0;
     }
+
+    /* ── Experience Filter ── */
+    .exp-filter-box {
+      background: white;
+      border: 1.5px solid #e5e7eb;
+      border-radius: 10px;
+      padding: 11px 13px;
+      margin-bottom: 12px;
+      transition: border-color 0.15s;
+    }
+
+    .exp-filter-box.active {
+      border-color: #0A66C2;
+      background: #f0f7ff;
+    }
+
+    .exp-filter-top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+    }
+
+    .exp-filter-left { flex: 1; }
+
+    .exp-filter-name {
+      font-size: 13px;
+      font-weight: 600;
+      color: #111827;
+    }
+
+    .exp-filter-desc {
+      font-size: 11px;
+      color: #6b7280;
+      margin-top: 1px;
+      line-height: 1.4;
+    }
+
+    /* Toggle switch */
+    .nli-toggle {
+      position: relative;
+      width: 38px;
+      height: 21px;
+      flex-shrink: 0;
+    }
+
+    .nli-toggle input { opacity: 0; width: 0; height: 0; }
+
+    .nli-toggle-slider {
+      position: absolute;
+      inset: 0;
+      background: #d1d5db;
+      border-radius: 21px;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+
+    .nli-toggle-slider::before {
+      content: "";
+      position: absolute;
+      width: 15px; height: 15px;
+      left: 3px; top: 3px;
+      background: white;
+      border-radius: 50%;
+      transition: transform 0.2s;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+    }
+
+    .nli-toggle input:checked + .nli-toggle-slider { background: #0A66C2; }
+    .nli-toggle input:checked + .nli-toggle-slider::before { transform: translateX(17px); }
+
+    /* Chips */
+    .exp-chips-row {
+      margin-top: 10px;
+      display: flex;
+      gap: 5px;
+      flex-wrap: wrap;
+    }
+
+    .exp-chip {
+      padding: 4px 11px;
+      border-radius: 20px;
+      font-size: 11px;
+      font-weight: 600;
+      border: 1.5px solid #d1d5db;
+      color: #374151;
+      background: #f9fafb;
+      cursor: pointer;
+      transition: all 0.15s;
+      user-select: none;
+    }
+
+    .exp-chip:hover { border-color: #0A66C2; color: #0A66C2; }
+
+    .exp-chip.active {
+      background: #0A66C2;
+      border-color: #0A66C2;
+      color: white;
+    }
+
+    .exp-chip:disabled,
+    .exp-chips-row.disabled .exp-chip {
+      opacity: 0.4;
+      pointer-events: none;
+    }
+
+    .exp-hint {
+      font-size: 10.5px;
+      color: #9ca3af;
+      margin-top: 7px;
+      line-height: 1.4;
+    }
+
+    .exp-hint b { color: #374151; }
 
     /* ── History ── */
     .history-header {
@@ -158,12 +265,10 @@
       font-weight: 600;
     }
 
-    .clear-btn:hover {
-      text-decoration: underline;
-    }
+    .clear-btn:hover { text-decoration: underline; }
 
     .history-list {
-      max-height: 240px;
+      max-height: 220px;
       overflow-y: auto;
     }
 
@@ -179,9 +284,7 @@
       gap: 8px;
     }
 
-    .history-item:last-child {
-      margin-bottom: 0;
-    }
+    .history-item:last-child { margin-bottom: 0; }
 
     .history-item-text {
       flex: 1;
@@ -222,9 +325,7 @@
       padding: 0 2px;
     }
 
-    .del-btn:hover {
-      color: #dc2626;
-    }
+    .del-btn:hover { color: #dc2626; }
 
     .empty-history {
       font-size: 12px;
@@ -252,7 +353,37 @@
 
     <div class="divider"></div>
 
-    <div class="options-title">🔧 Open on shortcut</div>
+    <!-- ── Experience Filter ── -->
+    <div class="section-title">⚡ Experience Filter</div>
+
+    <div class="exp-filter-box" id="exp-filter-box">
+      <div class="exp-filter-top">
+        <div class="exp-filter-left">
+          <div class="exp-filter-name">Hide high-experience jobs</div>
+          <div class="exp-filter-desc">Automatically hides cards on Naukri search</div>
+        </div>
+        <label class="nli-toggle">
+          <input type="checkbox" id="chk-exp-filter" />
+          <span class="nli-toggle-slider"></span>
+        </label>
+      </div>
+
+      <div class="exp-chips-row" id="exp-chips-row">
+        <span class="exp-chip" data-val="0">Freshers only</span>
+        <span class="exp-chip" data-val="1">≤ 1 yr</span>
+        <span class="exp-chip active" data-val="2">≤ 2 yrs</span>
+        <span class="exp-chip" data-val="4">≤ 4 yrs</span>
+      </div>
+
+      <div class="exp-hint" id="exp-hint">
+        Enable to hide jobs requiring &gt; <b id="exp-hint-val">2</b> years of experience
+      </div>
+    </div>
+
+    <div class="divider2"></div>
+
+    <!-- ── Open on shortcut ── -->
+    <div class="section-title">🔧 Open on shortcut</div>
 
     <label class="option-row" id="row-linkedin">
       <input type="checkbox" id="chk-linkedin" />
@@ -274,12 +405,13 @@
       <input type="checkbox" id="chk-people" />
       <div class="option-text">
         <div class="option-label">👥 LinkedIn People Search</div>
-        <div class="option-desc">Find employees at the company in this role on LinkedIn</div>
+        <div class="option-desc">Find employees at the company in this role</div>
       </div>
     </label>
 
     <div class="divider2"></div>
 
+    <!-- ── History ── -->
     <div class="history-header">
       <span class="history-title">📋 Applied / Searched History</span>
       <button class="clear-btn" id="clearBtn">Clear all</button>
